# WiStarBack

./: .gitignore  README.md  console.sql  manage.py  memo.txt  pyproject.toml  test.sh
.github/workflows/: checks.yml  checks_copy.yml  deploy.yml
Docs/troubleshooting/: Gunicorn 사용시 500번 에러 (태진).txt
WiStarBack/: settings.py
apps/: conftest.py
apps/comment/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/follow/: apps.py  models.py  serializers.py  urls.py  views.py  viewset_views.py
apps/idol/: admin.py  apps.py  docs.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/idol_schedule/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/image/: models.py  serializers.py  urls.py  utils.py  views.py
apps/like/: models.py  serializers.py  tests.py  urls.py  views.py
apps/post/: models.py  pagination.py  serializers.py  tests.py  urls.py  utils.py  views.py
apps/user/: admin.py  models.py  oauth_google_views.py  oauth_kakao_views.py  oauth_mixins.py  oauth_mixins_test.py  oauth_naver_views.py  oauth_test.py  oauth_urls.py  oauth_views.py  oauth_views_copy.py  oauth_views_old.py  oauth_views_test.py  serializers.py  tests.py  urls.py  views.py
apps/user_schedule/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
config/: exception_handler.py  schema.py  urls.py
config/settings/: __init__.py  base.py  local.py  (+2 more)
templates/: image_manager.html
utils/: csrf.py  csrf_views.py  exceptions.py  forms.py  jwt_serializers.py  middleware.py  models.py  swagger.py
wistar/: urls.py
(+44 files in other folders)
